2004-08-03  Per Bothner  <per@bothner.com>

	* GetRequest.java:  Extend MethodProc instead of CpsProcedure.
	* GetResponse.java:  Likewise.

2003-11-16  Per Bothner  <per@bothner.com>

	* CGIServletWrapper.java (getLocalPort, getLocalName, getRemotePort):
	New methods required by Servlets 2.4.
	(setCharacterEncoding):  Remove throws clause, for 2.4 compatibility.

	* CGIServletWrapper.java (isSecure):  More real implementation.

2003-10-29  Gerardo Jorvilleur <magoghm@Prodigy.net.mx>

	* KawaServlet.java (doPost):   New method.

2003-11-02  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java (getProcedure):  Replace 'parseFile' call
	by call to new 'parse' method.

2003-06-05  Per Bothner  <per@bothner.com>

	* ServletCallContext.java (getBaseUri):  Use entire request url,
	not just scheme+directory prefix.

2003-05-08  Per Bothner  <per@bothner.com>

	* KawaServlet.java (doGet):  Unwrap WrappedException.

	* KawaPageServlet.java (getProcedure):  Set file name of InPort.

	* KawaPageServlet.java (getProcedure):  Catch SyntaxException.

2003-03-02  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java (getProcedure):  Use getOutputStream instead
	of getWriter.to avoid a possible IllegalStateException.

	* ServletCallContext.java (getBaseUri):  New method.

2003-02-20  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java:  New class.  Contributed by Ivelin Ivanov
	<ivelin@apache.org> and Tom Reilly <treilly@macromedia.com>.
	* KawaServlet.java (doGet):  Catch exceptions.
	(apply(CallContext)):  Add throws specification.
	* Makefile.am (java_sources):  Added KawaPageServlet.java.

2002-07-29  Per Bothner  <per@bothner.com>

	* ServletCallContext.java:  Make class public.
	(getServletCallContext, getRequest, getResponse, getServlet,
	getServletConfig, getServletContext):  New static methods.
	* GetResponse.java:  Implement Inlineable.
	(compile, getReturnType):  New methods.
	(getReponse):  New static method.
